# ChangeLog for media-gfx/textext
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2008; Guy Rutenberg (guyru) <guyrutenberg@gmail.com>
  +textext-0.4.1.ebuild:
  Version bump of media-gfx/textext-0.4.1, bug #207690, thanks to Oliver Borm

  29 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de> textext-0.3.3.ebuild:
  Updated dependencies, thanks to Caster

  27 Jan 2008; Oliver Borm (oli) <oli.borm@web.de> +metadata.xml,
  +textext-0.3.3.ebuild:
  New Ebuild for bug 207690
