@@ -1,6 +1,4 @@
-DIST textext-0.3.3.tar.gz 9228 RMD160 869258925684e593ab4b5d19d3e230b67442c73d SHA1 4b14c892a8ab2e62a4d564b1d0886a7e2bf6bd1f SHA256 a9a4c8e846f146bf3ea9a4240add93576472edec58430562ad5a7f9b12671997
 DIST textext-0.4.1.tar.gz 7363 RMD160 53f9ae48ff4cb954656ef96b1ccf9b0c8cada830 SHA1 fec6da8a939673819edff8c79b0d6b5e26928bf3 SHA256 28b9af204b9a7ef3d406cc7dee02777572c1517fdeefcd882bd7b3e80017b96b
-EBUILD textext-0.3.3.ebuild 922 RMD160 a673fcb323908bd3a7005ec3624ed5de491d5317 SHA1 84dd6bff466dcf9cec6d3b0a97793f4348b9ab01 SHA256 81ccd616e86a7f672e56f5fae8bd1fc25156fb503ea874246529b3a2aca92242
 EBUILD textext-0.4.1.ebuild 1051 RMD160 7c3c8da9c7f22e03564e2757a8ae4b9b653b5e20 SHA1 83a191c5566e5871a7065c1665d2f99ee8dd2253 SHA256 603093f0c8c16ed656db0d3c4fde5167f6d3ce4ad62d0e309adcdcded9ec76d8
-MISC ChangeLog 522 RMD160 5a18fd1e81ec9a264d8b2b6b8df3d5665a5b9d85 SHA1 784deacaf9c2441b83a37b0793b6b162ec37ffab SHA256 d41926ea74a79111dbeafdfc273cbef1b9a4f6a8438f18cea74cf14384d504b0
+MISC ChangeLog 626 RMD160 1d33148563043686bd5249b916144067c2b290ff SHA1 658c7c34296d744d7cdd4413f930733616fe992b SHA256 caf6016bd30f189a64fd1c3a77b1c213c6644ec73ef78375a2e473dda1e31774
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
