@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 May 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -textext-0.3.3.ebuild:
+  Drop old version
+
   03 May 2008; Guy Rutenberg (guyru) <guyrutenberg@gmail.com>
   +textext-0.4.1.ebuild:
   Version bump of media-gfx/textext-0.4.1, bug #207690, thanks to Oliver Borm
